--- a/section_robot/ideal_robot.ipynb
+++ b/section_robot/ideal_robot.ipynb
@@ -135,6 +135,46 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Landmark:\n",
+    "    def __init__(self, x, y):\n",
+    "        self.pos = np.array([x, y]).T\n",
+    "        self.id = None\n",
+    "        \n",
+    "    def draw(self, ax, elems):\n",
+    "        c = ax.scatter(self.pos[0],\n",
+    "                       self.pos[1], \n",
+    "                       s = 100, marker=\"*\", label=\"landmark\", color=\"orange\")\n",
+    "        elems.append(c)\n",
+    "        elems.append(ax.text(self.pos[0], \n",
+    "                             self.pos[1], \n",
+    "                             \"id:\"+str(self.id), fontsize=10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Map:\n",
+    "    def __init__(self):\n",
+    "        self.landmarks = []\n",
+    "    \n",
+    "    def append_landmark(self, landmark):\n",
+    "        landmark.id = len(self.landmarks) + 1\n",
+    "        self.landmarks.append(landmark)\n",
+    "        \n",
+    "    def draw(self, ax, elems):\n",
+    "        for lm in self.landmarks:\n",
+    "            lm.draw(ax, elems)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {
     "scrolled": false
@@ -936,6 +976,12 @@
    "source": [
     "world = World(36, 1)\n",
     "#world = World(debug=True)\n",
+    "\n",
+    "m = Map()\n",
+    "m.append_landmark(Landmark(2, -2))\n",
+    "m.append_landmark(Landmark(-1, -3))\n",
+    "m.append_landmark(Landmark(3, 3))\n",
+    "world.append(m)\n",
     "\n",
     "straight = Agent(0.2, 0.0)\n",
     "circling = Agent(0.2, 10.0/180*math.pi)\n",
