--- a/section_robot/ideal_robot.ipynb
+++ b/section_robot/ideal_robot.ipynb
@@ -97,6 +97,9 @@
     "        \n",
     "        if self.sensor and len(self.poses) > 1:\n",
     "            self.sensor.draw(ax, elems, self.poses[-2])\n",
+    "            \n",
+    "        if self.agent and hasattr(self.agent, \"draw\"):\n",
+    "            self.agent.draw(ax, elems)\n",
     "        \n",
     "    @classmethod\n",
     "    def state_transition(cls, nu, omega, time, pose):\n",
@@ -1036,23 +1039,24 @@
     }
    ],
    "source": [
-    "world = World(36, 0.1, debug=False)\n",
+    "if __name__ == \"__main__\":\n",
+    "    world = World(36, 0.1, debug=False)\n",
     "\n",
-    "pp = pprint.PrettyPrinter(indent=4)\n",
+    "    pp = pprint.PrettyPrinter(indent=4)\n",
     "\n",
-    "m = Map()\n",
-    "m.append_landmark(Landmark(2, -2))\n",
-    "m.append_landmark(Landmark(-1, -3))\n",
-    "m.append_landmark(Landmark(3, 3))\n",
-    "world.append(m)\n",
+    "    m = Map()\n",
+    "    m.append_landmark(Landmark(2, -2))\n",
+    "    m.append_landmark(Landmark(-1, -3))\n",
+    "    m.append_landmark(Landmark(3, 3))\n",
+    "    world.append(m)\n",
     "\n",
-    "straight = Agent(0.2, 0.0)\n",
-    "circling = Agent(0.2, 10.0/180*math.pi)\n",
-    "robot1 = IdealRobot(np.array([2, 3, math.pi/6]).T, sensor=IdealCamera(m), agent=straight)\n",
-    "robot2 = IdealRobot(np.array([-2, -1, math.pi/5*6]).T, sensor=IdealCamera(m), agent=circling, color=\"red\")\n",
-    "world.append(robot1)\n",
-    "world.append(robot2)\n",
-    "world.draw()\n"
+    "    straight = Agent(0.2, 0.0)\n",
+    "    circling = Agent(0.2, 10.0/180*math.pi)\n",
+    "    robot1 = IdealRobot(np.array([2, 3, math.pi/6]).T, sensor=IdealCamera(m), agent=straight)\n",
+    "    robot2 = IdealRobot(np.array([-2, -1, math.pi/5*6]).T, sensor=IdealCamera(m), agent=circling, color=\"red\")\n",
+    "    world.append(robot1)\n",
+    "    world.append(robot2)\n",
+    "    world.draw()\n"
    ]
   }
  ],
