--- a/section_robot/ideal_robot.ipynb
+++ b/section_robot/ideal_robot.ipynb
@@ -123,7 +123,9 @@
     "            return\n",
     "        obs = self.sensor.data(self.pose) if self.sensor else None\n",
     "        nu, omega = self.agent.decision(obs)\n",
-    "        self.pose = self.state_transition(nu, omega, time_interval, self.pose)"
+    "        self.pose = self.state_transition(nu, omega, time_interval, self.pose)\n",
+    "        if self.sensor:\n",
+    "            self.sensor.data(self.pose)"
    ]
   },
   {
@@ -258,7 +260,7 @@
        "    } else if (typeof(MozWebSocket) !== 'undefined') {\n",
        "        return MozWebSocket;\n",
        "    } else {\n",
-       "        alert('Your browser does not have WebSocket support.' +\n",
+       "        alert('Your browser does not have WebSocket support. ' +\n",
        "              'Please try Chrome, Safari or Firefox ≥ 6. ' +\n",
        "              'Firefox 4 and 5 are also supported but you ' +\n",
        "              'have to enable WebSockets in about:config.');\n",
@@ -475,7 +477,7 @@
        "mpl.figure.prototype._init_toolbar = function() {\n",
        "    var fig = this;\n",
        "\n",
-       "    var nav_element = $('<div/>')\n",
+       "    var nav_element = $('<div/>');\n",
        "    nav_element.attr('style', 'width: 100%');\n",
        "    this.root.append(nav_element);\n",
        "\n",
@@ -532,7 +534,7 @@
        "        var fmt = mpl.extensions[ind];\n",
        "        var option = $(\n",
        "            '<option/>', {selected: fmt === mpl.default_extension}).html(fmt);\n",
-       "        fmt_picker.append(option)\n",
+       "        fmt_picker.append(option);\n",
        "    }\n",
        "\n",
        "    // Add hover states to the ui-buttons\n",
@@ -596,7 +598,7 @@
        "    var height = Math.abs(y1 - y0);\n",
        "\n",
        "    fig.rubberband_context.clearRect(\n",
-       "        0, 0, fig.canvas.width, fig.canvas.height);\n",
+       "        0, 0, fig.canvas.width / mpl.ratio, fig.canvas.height / mpl.ratio);\n",
        "\n",
        "    fig.rubberband_context.strokeRect(min_x, min_y, width, height);\n",
        "}\n",
@@ -901,7 +903,7 @@
        "mpl.figure.prototype._init_toolbar = function() {\n",
        "    var fig = this;\n",
        "\n",
-       "    var nav_element = $('<div/>')\n",
+       "    var nav_element = $('<div/>');\n",
        "    nav_element.attr('style', 'width: 100%');\n",
        "    this.root.append(nav_element);\n",
        "\n",
@@ -1076,7 +1078,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
