particle_filter: add motion test codes

--- a/section_uncertrainty/noise_simulation.ipynb
+++ b/section_uncertrainty/noise_simulation.ipynb
@@ -20,14 +20,14 @@
    "source": [
     "class Robot(IdealRobot):\n",
     "    \n",
-    "    def __init__(self, pose, agent=None, sensor=None, color=\"black\",\n",
+    "    def __init__(self, pose, agent=None, sensor=None, color=\"black\", orbit=True,\n",
     "                noise_per_meter=5, noise_std=math.pi/60,\n",
     "                bias_rate_stds=(0.1, 0.1),\n",
     "                expected_stuck_time=1e100,\n",
     "                expected_escape_time=1e-100,\n",
     "                expected_kidnap_time=1e100,\n",
     "                kidnap_range_x=(-5.0, 5.0), kidnap_range_y=(-5.0, 5.0)):\n",
-    "        super().__init__(pose, agent, sensor, color)\n",
+    "        super().__init__(pose, agent, sensor, color, orbit)\n",
     "        self.noise_pdf = expon(scale=1.0/(1e-100 + noise_per_meter))\n",
     "        self.distance_until_noise = self.noise_pdf.rvs()\n",
     "        self.theta_noise = norm(scale=noise_std)\n",
