sensor value to particle filter

--- a/section_robot/ideal_robot.ipynb
+++ b/section_robot/ideal_robot.ipynb
@@ -178,7 +178,7 @@
     "        self.landmarks = []\n",
     "    \n",
     "    def append_landmark(self, landmark):\n",
-    "        landmark.id = len(self.landmarks) + 1\n",
+    "        landmark.id = len(self.landmarks)\n",
     "        self.landmarks.append(landmark)\n",
     "        \n",
     "    def draw(self, ax, elems):\n",
@@ -1080,7 +1080,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
